--- a/src/apps/1688Admin/webapp/README.pug
+++ b/src/apps/1688Admin/webapp/README.pug
@@ -704,6 +704,11 @@ block content
                         |1.1688Admin后台新增OA外出申请、出差申请和工作流的增删改查相关页面；考勤更换页面形式。
                         br
                         |2.门户网站1688Web，PC端新增剩余的快捷导航相关页面；手机端新增新闻中心和创业服务相关页面。
+                    .p
+                        .num 11.29
+                        |1.1688Admin后台：OA 考勤管理页面修改增加开始时间和结束时间，去掉不必要的checkbox；岗位调整页面增加增删改查页面；系统管理-组织结构：增加设置部门负责人功能。
+                        br
+                        |2.门户网站1688Web，手机端页面引用的app.js改为app-m.js，剔除了手机端不必要的代码；新增资源服务、智慧园区、我的、登录注册相关页面。
                     
 
                     
