--- a/src/apps/1688Admin/webapp/sys-org-structure.pug
+++ b/src/apps/1688Admin/webapp/sys-org-structure.pug
@@ -32,6 +32,9 @@ block content
                     .btn.bg-red.bg-hover-darken.font-white#btn_remove
                         i.fa.fa-remove
                         |&nbsp;删除该节点
+                    .btn.btn-theme#btn_boss
+                        i.fa.fa-hand
+                        |&nbsp;设为部门负责人
             .row#tooltip
                 .col-xs-12
                     .text-center.font-gray-66 请选择节点进行编辑
