--- a/src/apps/1688Web/components/chuangye/index.styl
+++ b/src/apps/1688Web/components/chuangye/index.styl
@@ -279,3 +279,9 @@ AII_TITLE_PADDING = 0.5*(AII_TITLE_HEIGHT - AII_TITLE_LINE_HEIGHT)
         .hr-info-normal
             font-size 0.14rem
             color GRAY_66
+
+.mobile
+    .hr-filter-title
+        padding-bottom 0.04rem
+        font-size 0.12rem
+        margin-bottom 0.04rem
