--- a/src/apps/1688Web/components/m-app-list/index2.pug
+++ b/src/apps/1688Web/components/m-app-list/index2.pug
@@ -2,37 +2,37 @@
     .row
         .col-xs-3
             .abs-container.abs-hp-1of1
-                .abs-content.app-icon-box.touch-active.bg-yellow-bronze
+                a.abs-content.app-icon-box.touch-active.bg-yellow-bronze(href="m-resource-invest.html")
                     i.iconfont.icon-rongzi
             .app-title 融资服务
         .col-xs-3
             .abs-container.abs-hp-1of1
-                .abs-content.app-icon-box.touch-active.bg-purple-studio
+                a.abs-content.app-icon-box.touch-active.bg-purple-studio(href="m-resource-finance.html")
                     i.iconfont.icon-caishui
             .app-title 财税服务
         .col-xs-3
             .abs-container.abs-hp-1of1
-                .abs-content.app-icon-box.touch-active.bg-red-pink
+                a.abs-content.app-icon-box.touch-active.bg-red-pink(href="m-resource-hr.html")
                     i.iconfont.icon-hr
             .app-title 人力资源
         .col-xs-3
             .abs-container.abs-hp-1of1
-                .abs-content.app-icon-box.touch-active.bg-yellow-crusta
+                a.abs-content.app-icon-box.touch-active.bg-yellow-crusta(href="m-resource-management.html")
                     i.iconfont.icon-zixun
             .app-title 管理咨询
         .col-xs-3
             .abs-container.abs-hp-1of1
-                .abs-content.app-icon-box.touch-active.bg-red-orange
+                a.abs-content.app-icon-box.touch-active.bg-red-orange(href="m-resource-law.html")
                     i.iconfont.icon-falv
             .app-title 法律服务
         .col-xs-3
             .abs-container.abs-hp-1of1
-                .abs-content.app-icon-box.touch-active.bg-green-grass
+                a.abs-content.app-icon-box.touch-active.bg-green-grass(href="m-resource-patent.html")
                     i.iconfont.icon-zhuanli
             .app-title 专利服务
         .col-xs-3
             .abs-container.abs-hp-1of1
-                .abs-content.app-icon-box.touch-active.bg-blue-ocean
+                a.abs-content.app-icon-box.touch-active.bg-blue-ocean(href="m-resource-coach.html")
                     i.iconfont.icon-peixun
             .app-title 培训服务
         .col-xs-3
