--- a/src/apps/1688Web/components/m-app-list/index3.pug
+++ b/src/apps/1688Web/components/m-app-list/index3.pug
@@ -7,32 +7,32 @@
             .app-title 智慧停车
         .col-xs-3
             .abs-container.abs-hp-1of1
-                .abs-content.app-icon-box.touch-active.bg-green-jungle
+                a.abs-content.app-icon-box.touch-active.bg-green-jungle(href="m-food.html")
                     i.iconfont.icon-meishi
             .app-title 园区美食
         .col-xs-3
             .abs-container.abs-hp-1of1
-                .abs-content.app-icon-box.touch-active.bg-red-orange
+                a.abs-content.app-icon-box.touch-active.bg-red-orange(href="m-approval-meetingroom.html")
                     i.iconfont.icon-huiyishi
             .app-title 会议室租赁
         .col-xs-3
             .abs-container.abs-hp-1of1
-                .abs-content.app-icon-box.touch-active.bg-purple-studio
+                a.abs-content.app-icon-box.touch-active.bg-purple-studio(href="m-approval-hall.html")
                     i.iconfont.icon-zhanting
             .app-title 展厅租赁
         .col-xs-3
             .abs-container.abs-hp-1of1
-                .abs-content.app-icon-box.touch-active.bg-yellow-crusta
+                a.abs-content.app-icon-box.touch-active.bg-yellow-crusta(href="m-estate-clean.html")
                     i.iconfont.icon-wuye
             .app-title 智慧物业
         .col-xs-3
             .abs-container.abs-hp-1of1
-                .abs-content.app-icon-box.touch-active.bg-red-sunglo
+                a.abs-content.app-icon-box.touch-active.bg-red-sunglo(href="m-org-appeal.html")
                     i.iconfont.icon-suqiu
             .app-title 企业诉求
         .col-xs-3
             .abs-container.abs-hp-1of1
-                .abs-content.app-icon-box.touch-active.bg-blue-ocean
+                a.abs-content.app-icon-box.touch-active.bg-blue-ocean(href="m-park-hr.html")
                     i.iconfont.icon-zhaopin
             .app-title 企业招聘
         .col-xs-3
