--- a/src/apps/1688Web/components/m-footnav/index.pug
+++ b/src/apps/1688Web/components/m-footnav/index.pug
@@ -11,7 +11,7 @@
                     i.iconfont.icon-yuanqu
                 .footbar-btn-text 园区
         .col-xs-4
-            .footbar-btn.touch-active
+            .footbar-btn.touch-active#btn_personal
                 .footbar-btn-icon
                     i.iconfont.icon-yonghu
                 .footbar-btn-text 我的
