--- a/src/apps/1688Web/webapp/m-index.pug
+++ b/src/apps/1688Web/webapp/m-index.pug
@@ -32,7 +32,7 @@ block js
     script(src=JS_DIR + 'toastr.min.js')
     script(src=JS_DIR + 'BSModal.js')
     script(src=JS_DIR + 'common.js')
-    script(src=JS_DIR + 'app.js')
+    script(src=JS_DIR + 'app-m.js')
 
 block pagejs
     script(src=JS_DIR + 'index-m.js')
