--- a/src/apps/1688Web/webapp/stylus/index-m.styl
+++ b/src/apps/1688Web/webapp/stylus/index-m.styl
@@ -209,6 +209,8 @@ for i in (1..10)
 @require 'box-form'
 @require '../../components/chuangye/index'
 @require '../../components/company-list/index'
+@require '../../components/resource-piclist/index'
+@require '../../components/user-info/index'
 @require '../../components/topbar/index'
 @require '../../components/login/index'
 @require '../../components/banner/index'
