--- a/src/apps/1688Admin/webapp/oa-hr-post.pug
+++ b/src/apps/1688Admin/webapp/oa-hr-post.pug
@@ -2,8 +2,7 @@ extends layout
 
 block css
     link(rel='stylesheet', href=CSS_DIR + 'font-awesome.min.css')
-    link(rel='stylesheet', href=CSS_DIR + 'bootstrapValidator.min.css')
-    link(rel='stylesheet', href=CSS_DIR + 'bootstrap-select.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'bootstrap-table.min.css')
     link(rel='stylesheet', href=CSS_DIR + 'bootstrap-datetimepicker.min.css')
     link(rel='stylesheet', href=CSS_DIR + 'toastr.min.css')
     link(rel='stylesheet', href=CSS_DIR + 'index.css')
@@ -12,153 +11,53 @@ block content
     .container-fluid.row-space-common
         .row.mt-space
             .col-xs-12
-                .page-title
-                    |岗位调整
-                    a.btn.btn-sm.btn-theme.pull-right(href="oa-hr-coach.html")
-                        i.fa.fa-undo
-                        |&nbsp;返回
-            .col-xs-12.row-space-10
-                form#form.row.no-bottom(name="form")
-                    .col-xs-12.col-sm-6
-                        .form-group.cool-form-group.form-group-sm
-                            .cool-form-label.text-right.control-label 姓名：
-                            input.form-control(type='text')
-                    .col-xs-12.col-sm-6
-                        .form-group.cool-form-group.form-group-sm
-                            .cool-form-label.text-right.control-label 异动类别：
-                            select.form-control
-                                option 内部调岗
-                                option 临时借调
-                                option 正式调动
-                                option 晋升
-                                option 降职
-                    .col-xs-12.col-sm-6
-                        .form-group.cool-form-group.form-group-sm
-                            .cool-form-label.text-right.control-label 入职时间：
-                            .input-group.date#workdate
-                                input.form-control(type='text' id='worktime' name='worktime')
-                                .input-group-addon.btn.btn-line
-                                    i.fa.fa-calendar
-                    .col-xs-12.col-sm-6
-                        .form-group.cool-form-group.form-group-sm
-                            .cool-form-label.text-right.control-label 任现职时间：
-                            .input-group.date#workdate2
-                                input.form-control(type='text' id='worktime2' name='worktime2')
-                                .input-group-addon.btn.btn-line
-                                    i.fa.fa-calendar
-                    .col-xs-12
-                        .box-form.has-title
-                            .box-form-title 原岗位
-                            .row.no-bottom
-                                .col-xs-12.col-sm-6
-                                    .form-group.cool-form-group.form-group-sm
-                                        .cool-form-label.text-right.control-label 公司：
-                                        input.form-control(type="text")
-                                .col-xs-12.col-sm-6
-                                    .form-group.cool-form-group.form-group-sm
-                                        .cool-form-label.text-right.control-label 部门：
-                                        input.form-control(type="text")
-                                .col-xs-12.col-sm-6
-                                    .form-group.cool-form-group.form-group-sm
-                                        .cool-form-label.text-right.control-label 岗位：
-                                        input.form-control(type="text")
-                                .col-xs-12.col-sm-6
-                                    .form-group.cool-form-group.form-group-sm
-                                        .cool-form-label.text-right.control-label 薪资：
-                                        input.form-control(type="text")
-                    .col-xs-12
-                        .box-form.has-title
-                            .box-form-title 现岗位
-                            .row.no-bottom
-                                .col-xs-12.col-sm-6
-                                    .form-group.cool-form-group.form-group-sm
-                                        .cool-form-label.text-right.control-label 公司：
-                                        input.form-control(type="text")
-                                .col-xs-12.col-sm-6
-                                    .form-group.cool-form-group.form-group-sm
-                                        .cool-form-label.text-right.control-label 部门：
-                                        input.form-control(type="text")
-                                .col-xs-12.col-sm-6
-                                    .form-group.cool-form-group.form-group-sm
-                                        .cool-form-label.text-right.control-label 岗位：
-                                        input.form-control(type="text")
-                                .col-xs-12.col-sm-6
-                                    .form-group.cool-form-group.form-group-sm
-                                        .cool-form-label.text-right.control-label 薪资：
-                                        input.form-control(type="text")
-                    .col-xs-12
-                        .form-group.cool-form-group.form-group-sm
-                            .cool-form-label.text-right.control-label 薪资异动原因：
-                            textarea.textarea.form-control(rows='2')
-                    .col-xs-12
-                        .form-group.cool-form-group.form-group-sm
-                            .cool-form-label.text-right.control-label 调动原因：
-                            textarea.textarea.form-control(rows='2')
-                    .col-xs-12
-                        .form-group.cool-form-group.form-group-sm
-                            .cool-form-label.text-right.control-label 调动人意见：
-                            textarea.textarea.form-control(rows='2')
-                    .col-xs-12
-                        .form-group.cool-form-group.form-group-sm
-                            .cool-form-label.text-right.control-label 现部门意见：
-                            textarea.textarea.form-control(rows='2')
-                    .col-xs-12
-                        .form-group.cool-form-group.form-group-sm
-                            .cool-form-label.text-right.control-label 拟调入部门意见：
-                            textarea.textarea.form-control(rows='2')
-                    .col-xs-12
-                        .form-group.cool-form-group.form-group-sm
-                            .cool-form-label.text-right.control-label 人力资源负责人意见：
-                            textarea.textarea.form-control(rows='2')
-                    .col-xs-12
-                        .form-group.cool-form-group.form-group-sm
-                            .cool-form-label.text-right.control-label 分管副总意见：
-                            textarea.textarea.form-control(rows='2')
-                    .col-xs-12
-                        .form-group.cool-form-group.form-group-sm
-                            .cool-form-label.text-right.control-label 总经理意见：
-                            textarea.textarea.form-control(rows='2')
-                    .col-xs-12
-                        .btn.btn-large.btn-theme#btn_submit
-                            i.fa.fa-upload
-                            |&nbsp;提交
-
-
+                .page-title 岗位调整
+            .col-xs-12
+                .box-form.has-title.row-space-10
+                    .box-form-title 查询条件
+                    form#query_form.row.no-bottom(name='query_form')
+                        .col-xs-12.col-sm-6
+                            .form-group.cool-form-group.form-group-sm
+                                .cool-form-label.text-right.control-label 姓名：
+                                input.form-control(type="text")
+                        .col-xs-12.col-sm-6.col-md-6
+                            .form-group.cool-form-group.form-group-sm
+                                .cool-form-label.text-right.control-label 异动类别：
+                                select.form-control
+                                    option 内部调岗
+                                    option 临时借调
+                                    option 正式调动
+                                    option 晋升
+                                    option 降职
+                        .col-xs-12
+                            .btn.btn-line.btn-small
+                                i.fa.fa-search
+                                |&nbsp;查询
+            .col-xs-12
+                .toolbar#toolbar
+                    a.btn.btn-theme#toolbtn_new(href="oa-hr-post-new.html")
+                        i.fa.fa-plus
+                        |&nbsp;新增
+                    .btn.btn-theme#toolbtn_edit
+                        i.fa.fa-edit
+                        |&nbsp;编辑
+                    .btn.btn-theme#toolbtn_remove
+                        i.fa.fa-remove
+                        |&nbsp;删除
+                table#table
 
                     
 block js
     script(src=JS_DIR + 'jquery.min.js')
     script(src=JS_DIR + 'bootstrap.min.js')
-    script(src=JS_DIR + 'bootstrapvalidator/bootstrapValidator.min.js')
-    script(src=JS_DIR + 'bootstrapvalidator/zh_CN.js')
     script(src=JS_DIR + 'moment/moment.min.js')
     script(src=JS_DIR + 'moment/zh-cn.js')
     script(src=JS_DIR + 'bootstrap-datetimepicker.min.js')
-    script(src=JS_DIR + 'bootstrap-select/bootstrap-select.min.js')
-    script(src=JS_DIR + 'bootstrap-select/defaults-zh_CN.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table-zh-CN.min.js')
     script(src=JS_DIR + 'toastr.min.js')
     script(src=JS_DIR + 'BSModal.js')
     script(src=JS_DIR + 'common.js')
     script(src=JS_DIR + 'app.js')
     script(src=JS_DIR + 'oa-hr-post.js')
         
-
-
-
-
-                    
-            
-
-
-
-
-                    
-            
-
-
-
-
-            
-
-
-
