--- a/src/apps/1688Web/components/resource-piclist/index.styl
+++ b/src/apps/1688Web/components/resource-piclist/index.styl
@@ -100,3 +100,18 @@
                         color GRAY_33
                     &:before
                         display none
+
+.mobile
+    .rcs-pic-item
+        .rcs-pic-label
+            height 0.24rem
+            line-height 0.24rem
+            font-size 0.12rem
+            padding 0 0.04rem
+        .rcs-pic-title
+            line-height 0.24rem
+            padding 0 0.04rem
+            padding-top 0.04rem
+        .rcs-pic-content
+            padding 0 0.04rem 0.04rem 0.04rem
+            font-size 0.08rem
