--- a/src/apps/1688Web/webapp/m-chuangye-coach.pug
+++ b/src/apps/1688Web/webapp/m-chuangye-coach.pug
@@ -59,7 +59,7 @@ block js
     script(src=JS_DIR + 'toastr.min.js')
     script(src=JS_DIR + 'BSModal.js')
     script(src=JS_DIR + 'common.js')
-    script(src=JS_DIR + 'app.js')
+    script(src=JS_DIR + 'app-m.js')
 
 block pagejs
     script(src=JS_DIR + 'chuangye-coach.js')
