--- a/src/apps/1688Web/webapp/m-chuangye-roadshow.pug
+++ b/src/apps/1688Web/webapp/m-chuangye-roadshow.pug
@@ -78,4 +78,4 @@ block js
     script(src=JS_DIR + 'toastr.min.js')
     script(src=JS_DIR + 'BSModal.js')
     script(src=JS_DIR + 'common.js')
-    script(src=JS_DIR + 'app.js')
+    script(src=JS_DIR + 'app-m.js')
